DEX-26338 | fix: cards gap on mobile

--- a/_src-lp/blocks/new-prod-boxes/new-prod-boxes.scss
+++ b/_src-lp/blocks/new-prod-boxes/new-prod-boxes.scss
@@ -1442,6 +1442,10 @@ margin: 20px 0 0 5px;
         overflow: hidden;
     }
 
+    .new-prod-boxes-container .block {
+        gap: 20px;
+    }
+
     .new-prod-boxes-container .block .prod_box {
         margin-bottom: 0!important;
         margin-top: var(--green-tag-height) !important;
